# LDEngine

./: .gitignore  CMakeLists.txt  LDEngine.code-workspace  build.sh  ldengine.c
lib/: libSDL-1.2.0.dylib
